unpackaged/main/default/objects/Case/fields/ACG_AAA_Comments__c.field-meta.xml
<CustomField>
    <fullName>ACG_AAA_Comments__c</fullName>
    <label>AAA Comments</label>
    <type>TextArea</type>
</CustomField>