unpackaged/main/default/objects/Case/fields/ACG_AAA_Membership__c.field-meta.xml
<CustomField>
    <fullName>ACG_AAA_Membership__c</fullName>
    <formula>Account.ACG_AAA_Membership__c</formula>
    <inlineHelpText>AAA Membership # of related Account.</inlineHelpText>
    <label>AAA Membership #</label>
    <type>Text</type>
</CustomField>