unpackaged/main/default/objects/Case/fields/ACG_Activity_Count__c.field-meta.xml
<CustomField>
    <fullName>ACG_Activity_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Count populated via Rollup Helper for number of closed Tasks related to a Case.</description>
    <label>Activity Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>