unpackaged/main/default/objects/Case/fields/ACG_Actual_Cost__c.field-meta.xml
<CustomField>
    <fullName>ACG_Actual_Cost__c</fullName>
    <label>Actual Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>