unpackaged/main/default/objects/Case/fields/ACG_Address_Type__c.field-meta.xml
<CustomField>
    <fullName>ACG_Address_Type__c</fullName>
    <label>Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Physical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>