unpackaged/main/default/objects/Case/fields/ACG_Airline_Code__c.field-meta.xml
<CustomField>
    <fullName>ACG_Airline_Code__c</fullName>
    <label>Airline Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>