unpackaged/main/default/objects/Case/fields/ACG_Alternate_Member_Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>ACG_Alternate_Member_Customer_Contact__c</fullName>
    <inlineHelpText>List any alternate contacts here, such as out-of-territory AAA contacts, insurance agents, lawyers, etc. that are not visible in the Contact lookup.</inlineHelpText>
    <label>Alternate Member/Customer Contact</label>
    <type>TextArea</type>
</CustomField>