unpackaged/main/default/objects/Case/fields/ACG_Alternate_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>ACG_Alternate_Phone_Number__c</fullName>
    <label>Alternate Phone Number</label>
    <type>Phone</type>
</CustomField>