unpackaged/main/default/objects/Case/fields/ACG_Alternate_Vendor_Provider_Contact__c.field-meta.xml
<CustomField>
    <fullName>ACG_Alternate_Vendor_Provider_Contact__c</fullName>
    <inlineHelpText>Populate this filed with contact details if unable to locate a Contact using the lookup above.</inlineHelpText>
    <label>Alternate Vendor/Provider Contact</label>
    <type>TextArea</type>
</CustomField>