unpackaged/main/default/objects/Case/fields/ACG_Battery_Type_Model__c.field-meta.xml
<CustomField>
    <fullName>ACG_Battery_Type_Model__c</fullName>
    <label>Battery Type/Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AAA Battery</fullName>
            </value>
            <value>
                <fullName>Duralast</fullName>
            </value>
            <value>
                <fullName>Optima</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>