unpackaged/main/default/objects/Case/fields/ACG_BypassValidationForProcessBuilder__c.field-meta.xml
<CustomField>
    <fullName>ACG_BypassValidationForProcessBuilder__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>BypassValidationForProcessBuilder</inlineHelpText>
    <label>BypassValidationForProcessBuilder</label>
    <type>Checkbox</type>
</CustomField>