unpackaged/main/default/objects/Case/fields/ACG_Call_Id__c.field-meta.xml
<CustomField>
    <fullName>ACG_Call_Id__c</fullName>
    <description>To capture Call Id in FSL ERS Work Order Intake flow</description>
    <label>Call Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>