unpackaged/main/default/objects/Case/fields/ACG_Case_Comment_History__c.field-meta.xml
<CustomField>
    <fullName>ACG_Case_Comment_History__c</fullName>
    <label>Case Comment History</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>