unpackaged/main/default/objects/Case/fields/ACG_Case_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>ACG_Case_Contact_Number__c</fullName>
    <label>Member Contact Number</label>
    <type>Phone</type>
</CustomField>