unpackaged/main/default/objects/Case/fields/ACG_Case_Thread_ID__c.field-meta.xml
<CustomField>
    <fullName>ACG_Case_Thread_ID__c</fullName>
    <formula>&quot;ref:_&quot;&amp;LEFT($Organization.Id,5)&amp;SUBSTITUTE(RIGHT($Organization.Id,10),&quot;0&quot;,&quot;&quot;)&amp;&quot;._&quot;&amp;LEFT(Id,5)&amp;SUBSTITUTE(LEFT(RIGHT(Id,10),5),&quot;0&quot;,&quot;&quot;)&amp;RIGHT(Id,5)&amp;&quot;:ref&quot;</formula>
    <label>Case Thread ID</label>
    <type>Text</type>
</CustomField>