unpackaged/main/default/objects/Case/fields/ACG_Category__c.field-meta.xml
<CustomField>
    <fullName>ACG_Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AAA Contractor/Provider/Supplier Attitude/Professionalism</fullName>
            </value>
            <value>
                <fullName>AAA Contractor/Supplier</fullName>
            </value>
            <value>
                <fullName>AAA Credit Card</fullName>
            </value>
            <value>
                <fullName>AAA Rep. Attitude/Knowledge/Professionalism</fullName>
            </value>
            <value>
                <fullName>AAA Visa</fullName>
            </value>
            <value>
                <fullName>Access/Password</fullName>
            </value>
            <value>
                <fullName>Add/Remove Associate</fullName>
            </value>
            <value>
                <fullName>Add/Remove Employee</fullName>
            </value>
            <value>
                <fullName>Add Associate</fullName>
            </value>
            <value>
                <fullName>Add Donor</fullName>
            </value>
            <value>
                <fullName>Address Change</fullName>
            </value>
            <value>
                <fullName>Address Verification</fullName>
            </value>
            <value>
                <fullName>Adjust Billing Amount</fullName>
            </value>
            <value>
                <fullName>Adjust Expiration Date</fullName>
            </value>
            <value>
                <fullName>Adjust Member Since</fullName>
            </value>
            <value>
                <fullName>ADT</fullName>
            </value>
            <value>
                <fullName>Affinity Cellular</fullName>
            </value>
            <value>
                <fullName>Age &gt;65</fullName>
            </value>
            <value>
                <fullName>Air</fullName>
            </value>
            <value>
                <fullName>Antenna</fullName>
            </value>
            <value>
                <fullName>Application (ROW)</fullName>
            </value>
            <value>
                <fullName>Apply/Move Credit</fullName>
            </value>
            <value>
                <fullName>Apply Promo Code</fullName>
            </value>
            <value>
                <fullName>Attraction Tickets</fullName>
            </value>
            <value>
                <fullName>Autobill</fullName>
            </value>
            <value>
                <fullName>Auto Buying</fullName>
            </value>
            <value>
                <fullName>Auto Insurance</fullName>
            </value>
            <value>
                <fullName>Automatic Renewal</fullName>
            </value>
            <value>
                <fullName>Auto Travel</fullName>
            </value>
            <value>
                <fullName>Back Room</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>