unpackaged/main/default/objects/Case/fields/ACG_Closing_Comments__c.field-meta.xml
<CustomField>
    <fullName>ACG_Closing_Comments__c</fullName>
    <description>Comments from Branch Services Team summarizing case closing details.</description>
    <inlineHelpText>Comments from Branch Services Team summarizing case closing details.</inlineHelpText>
    <label>Closing Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>