unpackaged/main/default/objects/Case/fields/ACG_Code__c.field-meta.xml
<CustomField>
    <fullName>ACG_Code__c</fullName>
    <description>To capture Pacesetter Code in FSL Work Order Intake flow</description>
    <label>Pacesetter Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>L101:Flat Tire w/spare</fullName>
            </value>
            <value>
                <fullName>L102:Flat Tire w/o spare</fullName>
            </value>
            <value>
                <fullName>L103:Multiple Flat Tires</fullName>
            </value>
            <value>
                <fullName>L104:Need Air In Tire</fullName>
            </value>
            <value>
                <fullName>L190:Other Tire Problem (describe)</fullName>
            </value>
            <value>
                <fullName>L201:Engine Overheat</fullName>
            </value>
            <value>
                <fullName>L301:No Crank - Jump Start</fullName>
            </value>
            <value>
                <fullName>L302:No Crank - Bat Svc (non-AAA Bat)</fullName>
            </value>
            <value>
                <fullName>L303:No Crank - Bat Svc (AAA Bat)</fullName>
            </value>
            <value>
                <fullName>L304:Member Requests Battery Service</fullName>
            </value>
            <value>
                <fullName>L390:Other No Crank Problem (describe)</fullName>
            </value>
            <value>
                <fullName>L401:Crank No Start</fullName>
            </value>
            <value>
                <fullName>L402:Out Of Gasoline</fullName>
            </value>
            <value>
                <fullName>L403:Out Of Diesel</fullName>
            </value>
            <value>
                <fullName>L404:Electric Vehicle (EV) Out Of Charge</fullName>
            </value>
            <value>
                <fullName>L490:Other Crank No Start Problem (describe)</fullName>
            </value>
            <value>
                <fullName>L501:Won&#39;t Go Into Gear</fullName>
            </value>
            <value>
                <fullName>L505:Parking Brake Won&#39;t Release</fullName>
            </value>
            <value>
                <fullName>L506:Hood/Door Won&#39;t Close/Latch</fullName>
            </value>
            <value>
                <fullName>L507:Undercar Component Dragging</fullName>
            </value>
            <value>
                <fullName>L508:Leaking Fluids</fullName>
            </value>
            <value>
                <fullName>L510:Car Alarm Issue</fullName>
            </value>
            <value>
                <fullName>L590:Other Runs Won&#39;t Move Problem (describe)</fullName>
            </value>
            <value>
                <fullName>L601:Engine Runs Poorly</fullName>
            </value>
            <value>
                <fullName>L690:Other Runs Poorly Problem (describe)</fullName>
            </value>
            <value>
                <fullName>L701:Key Locked In Passenger Compartment</fullName>
            </value>
            <value>
                <fullName>L702:Key Locked In Trunk w/Trunk Release</fullName>
            </value>
            <value>
                <fullName>L703:Key Broken In Door - Not Ignition Key</fullName>
            </value>
            <value>
                <fullName>L790:Other Lockout Problem (describe)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>