unpackaged/main/default/objects/Case/fields/ACG_Collision__c.field-meta.xml
<CustomField>
    <fullName>ACG_Collision__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collision</label>
    <type>Checkbox</type>
</CustomField>