unpackaged/main/default/objects/Case/fields/ACG_Color__c.field-meta.xml
<CustomField>
    <fullName>ACG_Color__c</fullName>
    <label>Vehicle Color</label>
    <length>30</length>
    <type>Text</type>
</CustomField>