unpackaged/main/default/objects/Case/fields/ACG_Contact_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>ACG_Contact_Mailing_Address__c</fullName>
    <formula>Contact.MailingStreet + BR() +Contact.MailingCity + &#39;,&#39;+ &#39; &#39; + Contact.MailingState + &#39; &#39; + Contact.MailingPostalCode + &#39; &#39; + Contact.MailingCountry</formula>
    <label>Contact Mailing Address</label>
    <type>Text</type>
</CustomField>