unpackaged/main/default/objects/Case/fields/ACG_Contact_Preference__c.field-meta.xml
<CustomField>
    <fullName>ACG_Contact_Preference__c</fullName>
    <inlineHelpText>Preferred method of contact for the Member/Customer.</inlineHelpText>
    <label>Contact Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>