unpackaged/main/default/objects/Case/fields/ACG_Cost_of_Resolution__c.field-meta.xml
<CustomField>
    <fullName>ACG_Cost_of_Resolution__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The cost associated with resolving the issue.</inlineHelpText>
    <label>Cost of Resolution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>