unpackaged/main/default/objects/Case/fields/ACG_Created_Day_of_the_Week__c.field-meta.xml
<CustomField>
    <fullName>ACG_Created_Day_of_the_Week__c</fullName>
    <formula>CASE(MOD( (DATEVALUE(CreatedDate)) - DATE( 1900, 1, 7 ), 7 ),0, &quot;Sunday&quot;,1, &quot;Monday&quot;,2, &quot;Tuesday&quot;,3, &quot;Wednesday&quot;,4, &quot;Thursday&quot;,5, &quot;Friday&quot;,&quot;Saturday&quot;)</formula>
    <label>Created Day of the Week</label>
    <type>Text</type>
</CustomField>