unpackaged/main/default/objects/Case/fields/ACG_Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>ACG_Customer_Email__c</fullName>
    <label>Customer Email</label>
    <type>Email</type>
</CustomField>