unpackaged/main/default/objects/Case/fields/ACG_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>ACG_Customer_Name__c</fullName>
    <description>Customer Name populated via Car Care Appointment Page</description>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>