unpackaged/main/default/objects/Case/fields/ACG_Customer_Phone__c.field-meta.xml
<CustomField>
    <fullName>ACG_Customer_Phone__c</fullName>
    <label>Customer Phone</label>
    <type>Phone</type>
</CustomField>