unpackaged/main/default/objects/Case/fields/ACG_Customer_Staying_with_the_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>ACG_Customer_Staying_with_the_Vehicle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer Staying with the Vehicle</description>
    <label>Customer Staying with the Vehicle</label>
    <type>Checkbox</type>
</CustomField>