unpackaged/main/default/objects/Case/fields/ACG_Date_of_Event__c.field-meta.xml
<CustomField>
    <fullName>ACG_Date_of_Event__c</fullName>
    <inlineHelpText>When did the Member/Customer&#39;s issue occur?</inlineHelpText>
    <label>Date of Event</label>
    <type>Date</type>
</CustomField>