unpackaged/main/default/objects/Case/fields/ACG_Decision__c.field-meta.xml
<CustomField>
    <fullName>ACG_Decision__c</fullName>
    <label>Decision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Action</fullName>
            </value>
            <value>
                <fullName>Warning Letter</fullName>
            </value>
            <value>
                <fullName>Recommend Cancel</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Non Renew</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>