unpackaged/main/default/objects/Case/fields/ACG_Dispatched_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>ACG_Dispatched_Timestamp__c</fullName>
    <formula>FSL_Work_Order__r.Dispatched_Timestamp__c</formula>
    <label>Dispatched Timestamp</label>
    <type>DateTime</type>
</CustomField>