unpackaged/main/default/objects/Case/fields/ACG_Does_video_footage_support_the_case__c.field-meta.xml
<CustomField>
    <fullName>ACG_Does_video_footage_support_the_case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Does the video footage support the case?</label>
    <type>Checkbox</type>
</CustomField>