unpackaged/main/default/objects/Case/fields/ACG_Don_t_Send_Email__c.field-meta.xml
<CustomField>
    <fullName>ACG_Don_t_Send_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Don&#39;t Send Email</label>
    <type>Checkbox</type>
</CustomField>