unpackaged/main/default/objects/Case/fields/ACG_DRC_Voucher_Number__c.field-meta.xml
<CustomField>
    <fullName>ACG_DRC_Voucher_Number__c</fullName>
    <inlineHelpText>When appropriate, populate the DRC Voucher Number.</inlineHelpText>
    <label>DRC Voucher Number</label>
    <length>5</length>
    <type>Text</type>
</CustomField>