unpackaged/main/default/objects/Case/fields/ACG_Drivetrain__c.field-meta.xml
<CustomField>
    <fullName>ACG_Drivetrain__c</fullName>
    <label>Drivetrain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2WD</fullName>
            </value>
            <value>
                <fullName>4WD</fullName>
            </value>
            <value>
                <fullName>AWD</fullName>
            </value>
            <value>
                <fullName>U/K</fullName>
            </value>
            <value>
                <fullName>RWD</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>FWD</fullName>
            </value>
            <value>
                <fullName>4 X 2</fullName>
            </value>
            <value>
                <fullName>6 X 4</fullName>
            </value>
            <value>
                <fullName>6 X 2</fullName>
            </value>
            <value>
                <fullName>8 X 4</fullName>
            </value>
            <value>
                <fullName>6 X 6</fullName>
            </value>
            <value>
                <fullName>4 X 4</fullName>
            </value>
            <value>
                <fullName>8 X 6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>