unpackaged/main/default/objects/Case/fields/ACG_Driving_Directions__c.field-meta.xml
<CustomField>
    <fullName>ACG_Driving_Directions__c</fullName>
    <description>This field maps to Driving Directions on the Work Order</description>
    <label>Driver Directions</label>
    <type>TextArea</type>
</CustomField>