unpackaged/main/default/objects/Case/fields/ACG_EEMU_Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>ACG_EEMU_Unique_Identifier__c</fullName>
    <label>EEMU Unique Identifier</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>