unpackaged/main/default/objects/Case/fields/ACG_EEMU_Users_Voted__c.field-meta.xml
<CustomField>
    <fullName>ACG_EEMU_Users_Voted__c</fullName>
    <description>List of Users Voted on EEMU case by alias name</description>
    <label>EEMU Users Voted</label>
    <type>TextArea</type>
</CustomField>