unpackaged/main/default/objects/Case/fields/ACG_Entitlements_Returned__c.field-meta.xml
<CustomField>
    <fullName>ACG_Entitlements_Returned__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Entitlements Returned</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>