unpackaged/main/default/objects/Case/fields/ACG_ERS_Call__c.field-meta.xml
<CustomField>
    <fullName>ACG_ERS_Call__c</fullName>
    <inlineHelpText>ERS Call Number associated with this Case.</inlineHelpText>
    <label>ERS Call #</label>
    <length>25</length>
    <type>Text</type>
</CustomField>