unpackaged/main/default/objects/Case/fields/ACG_Escalated_to_Management__c.field-meta.xml
<CustomField>
    <fullName>ACG_Escalated_to_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalated to Management</label>
    <type>Checkbox</type>
</CustomField>