unpackaged/main/default/objects/Case/fields/ACG_External_Agency__c.field-meta.xml
<CustomField>
    <fullName>ACG_External_Agency__c</fullName>
    <label>External Agency</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Origin</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AAA National</fullName>
            </value>
            <value>
                <fullName>AAA National (MRL)</fullName>
            </value>
            <value>
                <fullName>Better Business Bureau (BBB)</fullName>
            </value>
            <value>
                <fullName>Department of Justice</fullName>
            </value>
            <value>
                <fullName>NC Attorney General&#39;s Office</fullName>
            </value>
            <value>
                <fullName>SC Attorney General&#39;s Office</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>