unpackaged/main/default/objects/Case/fields/ACG_Facility_Cost_of_Resolution__c.field-meta.xml
<CustomField>
    <fullName>ACG_Facility_Cost_of_Resolution__c</fullName>
    <label>Facility Cost of Resolution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>