unpackaged/main/default/objects/Case/fields/ACG_Final_Outcome__c.field-meta.xml
<CustomField>
    <fullName>ACG_Final_Outcome__c</fullName>
    <inlineHelpText>Please indicate the final sentiment of the Contact upon resolution of the Case.</inlineHelpText>
    <label>Final Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Satisfied</fullName>
            </value>
            <value>
                <fullName>Unsatisfied</fullName>
            </value>
            <value>
                <fullName>Unable to Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>