unpackaged/main/default/objects/Case/fields/ACG_Has_Any_Car_Care_Visits__c.field-meta.xml
<CustomField>
    <fullName>ACG_Has_Any_Car_Care_Visits__c</fullName>
    <description>Roll up summary of Car Care visits for the associated Account.This field is populated via BatchEEMURollup apex class.</description>
    <label>Has Any Car Care Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>