unpackaged/main/default/objects/Case/fields/ACG_Has_Any_Insurance_Policies__c.field-meta.xml
<CustomField>
    <fullName>ACG_Has_Any_Insurance_Policies__c</fullName>
    <description>Roll up summary of Insurance policies for the associated Account.This field is populated via BatchEEMURollup apex class.</description>
    <label>Has Any Insurance Policies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>