unpackaged/main/default/objects/Case/fields/ACG_Insurance_Claim__c.field-meta.xml
<CustomField>
    <fullName>ACG_Insurance_Claim__c</fullName>
    <label>Insurance Claim #</label>
    <length>25</length>
    <type>Text</type>
</CustomField>