unpackaged/main/default/objects/Case/fields/ACG_Invoice__c.field-meta.xml
<CustomField>
    <fullName>ACG_Invoice__c</fullName>
    <description>Invoice # provided by vendor</description>
    <inlineHelpText>Invoice # provided by vendor</inlineHelpText>
    <label>Invoice #</label>
    <length>25</length>
    <type>Text</type>
</CustomField>