unpackaged/main/default/objects/Case/fields/ACG_Is_Case_Related_to_an_AT_or_MP__c.field-meta.xml
<CustomField>
    <fullName>ACG_Is_Case_Related_to_an_AT_or_MP__c</fullName>
    <inlineHelpText>Indicates if the case is related to an AT (Attraction Ticket) or a MP (Money Product). If it is not, you must select a Supplier from the field below.</inlineHelpText>
    <label>Is Case Related to an AT or MP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>