unpackaged/main/default/objects/Case/fields/ACG_Issue__c.field-meta.xml
<CustomField>
    <fullName>ACG_Issue__c</fullName>
    <label>Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>My AAA Membership will not validate</fullName>
            </value>
            <value>
                <fullName>My AAA Membership is already in use</fullName>
            </value>
            <value>
                <fullName>I do not know my AAA Membership number</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>