unpackaged/main/default/objects/Case/fields/ACG_Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>ACG_Issue_Type__c</fullName>
    <label>Issue Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>