unpackaged/main/default/objects/Case/fields/ACG_Keep_Ownership__c.field-meta.xml
<CustomField>
    <fullName>ACG_Keep_Ownership__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to keep ownership of the Case and bypass assignment rules.</inlineHelpText>
    <label>Keep Ownership</label>
    <type>Checkbox</type>
</CustomField>