unpackaged/main/default/objects/Case/fields/ACG_Last_Call_Activity__c.field-meta.xml
<CustomField>
    <fullName>ACG_Last_Call_Activity__c</fullName>
    <label>Last Call Activity</label>
    <type>DateTime</type>
</CustomField>