unpackaged/main/default/objects/Case/fields/ACG_Last_Call_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>ACG_Last_Call_Duration_Minutes__c</fullName>
    <label>Last Call Duration (Minutes)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>