unpackaged/main/default/objects/Case/fields/ACG_Level_of_Abuse__c.field-meta.xml
<CustomField>
    <fullName>ACG_Level_of_Abuse__c</fullName>
    <label>Who?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Membership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>