unpackaged/main/default/objects/Case/fields/ACG_Lift_Type__c.field-meta.xml
<CustomField>
    <fullName>ACG_Lift_Type__c</fullName>
    <label>Lift Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bendpack</fullName>
            </value>
            <value>
                <fullName>Challenger</fullName>
            </value>
            <value>
                <fullName>Eagle</fullName>
            </value>
            <value>
                <fullName>Forward</fullName>
            </value>
            <value>
                <fullName>Hunter Scissor Lift</fullName>
            </value>
            <value>
                <fullName>Rotary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>