unpackaged/main/default/objects/Case/fields/ACG_Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>ACG_Line_of_Business__c</fullName>
    <label>Line of Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto Buying</fullName>
            </value>
            <value>
                <fullName>Car Care</fullName>
            </value>
            <value>
                <fullName>Corporate (IT, HR, etc.)</fullName>
            </value>
            <value>
                <fullName>Emergency Road Service</fullName>
            </value>
            <value>
                <fullName>FINS</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Member Services</fullName>
            </value>
            <value>
                <fullName>Traffic Safety</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>