unpackaged/main/default/objects/Case/fields/ACG_Line_of_Business_Origin__c.field-meta.xml
<CustomField>
    <fullName>ACG_Line_of_Business_Origin__c</fullName>
    <label>Line of Business Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>