unpackaged/main/default/objects/Case/fields/ACG_Location__c.field-meta.xml
<CustomField>
    <fullName>ACG_Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>AAA Location</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>AAA_Location__c.Car_Care_Manager__c</field>
            <operation>notEqual</operation>
            <value />
        </filterItems>
        <filterItems>
            <field>AAA_Location__c.Car_Care_Manager__r.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>This lookup only includes AAA Locations with an assigned Car Care Manager.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>AAA_Location__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>