unpackaged/main/default/objects/Case/fields/ACG_Location_of_Appointment__c.field-meta.xml
<CustomField>
    <fullName>ACG_Location_of_Appointment__c</fullName>
    <description>Location of Appointment populated via Car Care Appointment Page</description>
    <label>Requested Appointment Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>