unpackaged/main/default/objects/Case/fields/ACG_Make__c.field-meta.xml
<CustomField>
    <fullName>ACG_Make__c</fullName>
    <label>Vehicle Make</label>
    <length>36</length>
    <type>Text</type>
</CustomField>